--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 <iframe 
   name="bgframe" 
-  src="index.html" 
+  src="bg.html" 
   style="position:fixed; top:0; left:0; width:100%; height:100%; border:none; z-index:-1;">
 </iframe>    
 
@@ -60,4 +60,5 @@
 
 
 </body>
+
 </html>
