--- a/tao2.html
+++ b/tao2.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-<iframe src="main.html" width="100%" height="100%" style="border:none; position:fixed; top:0; left:0;"></iframe>
+<iframe src="index.html" width="100%" height="100%" style="border:none; position:fixed; top:0; left:0;"></iframe>
     <!-- Para siya sa popout or lalabas sa gitna -->
      <div class="labasan">
         <div class="popout">
@@ -24,4 +24,5 @@
      </div>
     </div>
 </body>
+
 </html>
