--- a/tao4.html
+++ b/tao4.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-<iframe src="main.html" width="100%" height="100%" style="border:none; position:fixed; top:0; left:0;"></iframe>
+<iframe src="index.html" width="100%" height="100%" style="border:none; position:fixed; top:0; left:0;"></iframe>
 
     <!-- Para siya sa popout or lalabas sa gitna -->
      <div class="labasan">
@@ -29,4 +29,5 @@
      </div>
     </div>
 </body>
+
 </html>
