--- a/tao1.html
+++ b/tao1.html
@@ -16,7 +16,7 @@
     <!-- Para siya sa popout or lalabas sa gitna -->
      <div class="labasan">
         <div class="popout">
-            <a class="closee" href="main.html">X</a>
+            <a class="closee" href="index.html">X</a>
             <h2 class="popout_title">keian</h2>
             <img src="imgs/keian cantay.jpg"Sample Image 1" width="150" style="border-radius: 16px;">
             <p class="popout_desc">✨ "Hi, I’m Keian cantay i love coding and eating
@@ -27,3 +27,4 @@
 </body>
 
 </html>
+
