--- a/tao2.html
+++ b/tao2.html
@@ -14,7 +14,7 @@
     <!-- Para siya sa popout or lalabas sa gitna -->
      <div class="labasan">
         <div class="popout">
-            <a class="closee" href="main.html">X</a>
+            <a class="closee" href="index.html">X</a>
             <h2 class="popout_title">charitie</h2>
              <img src="imgs/charitie.jpg" width="150" height="267" style="border-radius: 16px;">
             <p class="popout_desc">charitie cute(✿◠‿◠) She loves fun things and has a soft, cozy vibe. <br> 
@@ -26,3 +26,4 @@
 </body>
 
 </html>
+
