--- a/tao3.html
+++ b/tao3.html
@@ -16,7 +16,7 @@
     <!-- Para siya sa popout or lalabas sa gitna -->
     <div class="labasan">
         <div class="popout">
-            <a class="closee" href="main.html">X</a>
+            <a class="closee" href="index.html">X</a>
             <h2 class="popout_title">chester</h2>
             <img src="imgs/chester.jpg" alt="Sample Image 1" width="150" height="267" style="border-radius: 16px;">
             <p class="popout_desc">chester is always cheerful <br>
@@ -29,3 +29,4 @@
 </body>
 
 </html>
+
