--- a/tao5.html
+++ b/tao5.html
@@ -19,7 +19,7 @@
     <!-- Para siya sa popout or lalabas sa gitna -->
      <div class="labasan">
         <div class="popout">
-            <a class="closee" href="main.html">X</a>
+            <a class="closee" href="index.html">X</a>
             <h2 class="popout_title">Fritzy</h2>
             <img src="imgs/fritzy.jpg" alt="Sample Image 1" width="150" height="267" style="border-radius: 16px;">
              <p class="popout_desc">  fritzy always like playing roblox<br>
@@ -31,3 +31,4 @@
 </body>
 
 </html>
+
