--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class ="card_content">
             <a href="tao4.html" style="text-decoration:none; color:black;">
             <h2>Jessa Mae Pelia</h2>
-            <img src="imgs/jessa.jpg" alt="Sample Image 4" width="200" height="356" style="border-radius: 16px;">
+            <img src="imgs/img3.png" alt="Sample Image 4" width="200" height="356" style="border-radius: 16px;">
             </a>
         </section>
 
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
