--- a/bg.html
+++ b/bg.html
@@ -19,6 +19,8 @@
   </style>
 </head>
 <body>
-  <img src="https://static.vecteezy.com/system/resources/previews/025/466/147/non_2x/dark-black-gradient-abstract-background-modern-empty-background-vector.jpg" alt="Fullscreen GIF">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSVpuoYuU61W93nbOxB_BKcs5hUNytVfqB5L30cfr5V0W0Gdmx3ApT53s&s=10"
+    alt="Fullscreen GIF">
 </body>
 </html>
+
